--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'ir.farshid_roohi:linegraph:0.1.3'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
 }
