--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-beta01"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
 
 }
