--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
